Correctly reset ScrollAnimator animation state after cancelling animation

We were calling willAnimaterToOffset with the updated target position before
clearing the animation state when in PostAnimationCleanup. As a result, we
didn't take into account the potentially modified scroll offset by a
programmatic scroll.

BUG=598548

Review URL: https://codereview.chromium.org/1842623003

Cr-Commit-Position: refs/heads/master@{#383854}

Former-commit-id: d7b5be44530835f2b1f3c3cfc8d6d7ea18a50553